// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BentoMenuButton Matches Snapshot (productGroups and externalLinks) 1`] = `
.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c2:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c2 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c3 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
  padding: 0;
  width: var(--size-2x);
}

.c3 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c3:focus-visible {
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c3:hover,
.c3[aria-expanded='true'] {
  background-color: rgb(0 0 0 / 0.5);
  border-color: transparent;
  color: #FFFFFF;
}

.c3[aria-disabled='true'] {
  background-color: transparent;
  border-color: transparent;
  color: #006296;
  cursor: not-allowed;
  pointer-events: none;
}

.c4 {
  background-color: #FFFFFF;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgb(0 0 0 / 0.2);
  color: #1B1C1E;
  list-style-type: none;
  position: absolute;
  width: 100%;
  z-index: 700;
}

.c0 {
  position: relative;
}

.c6 {
  max-width: 350px;
  min-width: 200px;
  right: 0;
  width: initial;
}

.c18 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: var(--border-radius);
  color: #006296;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.875rem;
  line-height: 1.5rem;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c18:hover {
  color: #003A5A;
}

.c18:visited {
  color: #006296;
}

.c18 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c18:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c24 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: var(--border-radius);
  color: #8FCEF0;
  cursor: default;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.875rem;
  line-height: 1.5rem;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c24 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c24:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c16 {
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c23 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 1rem;
  margin-left: var(--spacing-half);
  margin-right: 0;
  width: 1rem;
}

.c19 {
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c19:visited svg {
  color: #006296;
}

.c22 {
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c21 {
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: 2rem;
  overflow: hidden;
  padding: 0 var(--spacing-2x) 0 var(--spacing-3x);
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c21 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c21:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c21:hover {
  background-color: #DBDEE1;
}

.c21:visited {
  color: #006296;
  fill: #006296;
}

.c21:visited svg {
  color: #006296;
  fill: #006296;
}

.c21[disabled] {
  color: #B7BBC2;
  fill: #B7BBC2;
  pointer-events: none;
}

.c7 {
  color: #1B1C1E;
  font-size: 1rem;
  font-weight: var(--font-semi-bold);
  line-height: 1.5rem;
  margin: var(--spacing-3x) 0;
}

.c9 {
  font-size: 0.875rem;
  margin: 0;
  padding: 0 var(--spacing-2x);
  padding-bottom: var(--spacing-1x);
}

.c10 {
  margin: 0;
  overflow-y: auto;
  padding: 0;
}

.c10:not(:last-child)::after {
  border-bottom: 1px solid #DBDEE1;
  content: '';
  display: block;
  margin: 0 var(--spacing-2x);
}

.c12 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  background-color: #F1F2F2;
  border: 1px solid #DBDEE1;
  border-radius: var(--border-radius);
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin: 0 var(--spacing-half) 2px 0;
  padding: var(--spacing-half);
}

.c14 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
}

.c15 {
  line-height: 1.25rem;
  margin: auto var(--spacing-1x) auto 0;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c13 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  font-size: 0.875rem;
  margin: 0;
  overflow: hidden;
  padding: 0 0 0 var(--spacing-half);
}

.c11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2.5rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c11 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c11:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c11:hover {
  background-color: #DBDEE1;
}

.c11[disabled],
.c11[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c17 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2.5rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c17 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c17:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c17:hover {
  background-color: transparent;
}

.c17[disabled],
.c17[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c1 .c5 {
  border-radius: var(--border-radius-2x);
  box-sizing: border-box;
  max-width: 350px;
  min-width: 200px;
  padding: var(--spacing-1halfx) 0;
  right: 0;
  width: initial;
}

.c1 .c5 .c20 {
  line-height: 1.5rem;
  padding: var(--spacing-half) var(--spacing-2x);
}

.c1 .c5 .c8 {
  margin: 0 0 var(--spacing-1x);
  padding: 0 var(--spacing-2x);
}

.c1 .c5 ul:not(:last-child)::after,
.c1 .c5 ol:not(:last-child)::after {
  border-bottom: 1px solid #DBDEE1;
  content: '';
  display: block;
  margin: var(--spacing-1x) var(--spacing-2x);
}

<div
  aria-label=""
  class="c0 c1"
  data-testid="dropdown-container"
  id="uuid1"
>
  <button
    aria-expanded="false"
    class="c2 c3"
    data-testid="menu-button"
    type="button"
  >
    <svg
      class="lucide lucide-grip"
      fill="none"
      focusable="false"
      height="16"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="5"
        r="1"
      />
      <circle
        cx="19"
        cy="5"
        r="1"
      />
      <circle
        cx="5"
        cy="5"
        r="1"
      />
      <circle
        cx="12"
        cy="12"
        r="1"
      />
      <circle
        cx="19"
        cy="12"
        r="1"
      />
      <circle
        cx="5"
        cy="12"
        r="1"
      />
      <circle
        cx="12"
        cy="19"
        r="1"
      />
      <circle
        cx="19"
        cy="19"
        r="1"
      />
      <circle
        cx="5"
        cy="19"
        r="1"
      />
    </svg>
  </button>
  <div
    class="c4 c5 c6"
    data-testid="menu-dropdownMenu"
    hidden=""
    id="uuid2"
  >
    <h3
      class="c7 c8 c9"
      id="A-links"
    >
      Product Group A
    </h3>
    <ul
      aria-labelledby="A-links"
      class="c10"
      data-testid="products-group"
    >
      <li>
        <a
          aria-disabled="false"
          class="c11"
          data-testid="listitem-optionA"
          href="/testa"
          tabindex="0"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            class="c12"
            color="currentColor"
            focusable="false"
            height="22"
            width="22"
          />
          <div
            class="c13"
          >
            <div
              class="c14"
            >
              <span
                class="c15"
              >
                Option A
              </span>
            </div>
          </div>
          <span
            class="c16"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="true"
          class="c17"
          data-testid="listitem-optionB"
          disabled=""
          href="/testb"
          tabindex="-1"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            class="c12"
            color="currentColor"
            focusable="false"
            height="22"
            width="22"
          />
          <div
            class="c13"
          >
            <div
              class="c14"
            >
              <span
                class="c15"
              >
                Option B
              </span>
            </div>
          </div>
          <span
            class="c16"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c11"
          data-testid="listitem-optionC"
          href="/testc"
          tabindex="0"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            class="c12"
            color="currentColor"
            focusable="false"
            height="22"
            width="22"
          />
          <div
            class="c13"
          >
            <div
              class="c14"
            >
              <span
                class="c15"
              >
                Option C
              </span>
            </div>
          </div>
          <span
            class="c16"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c11"
          data-testid="listitem-optionD"
          href="/testd"
          tabindex="0"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            class="c12"
            color="currentColor"
            focusable="false"
            height="22"
            width="22"
          />
          <div
            class="c13"
          >
            <div
              class="c14"
            >
              <span
                class="c15"
              >
                Option D
              </span>
            </div>
          </div>
          <span
            class="c16"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
    </ul>
    <h3
      class="c7 c8 c9"
      id="A-links"
    >
      Product Group A
    </h3>
    <ul
      aria-labelledby="A-links"
      class="c10"
      data-testid="products-group"
    >
      <li>
        <a
          aria-disabled="false"
          class="c11"
          data-testid="listitem-optionE"
          href="/teste"
          tabindex="0"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            class="c12"
            color="currentColor"
            focusable="false"
            height="22"
            width="22"
          />
          <div
            class="c13"
          >
            <div
              class="c14"
            >
              <span
                class="c15"
              >
                Option E
              </span>
            </div>
          </div>
          <span
            class="c16"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c11"
          data-testid="listitem-optionF"
          href="/testf"
          tabindex="0"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            class="c12"
            color="currentColor"
            focusable="false"
            height="22"
            width="22"
          />
          <div
            class="c13"
          >
            <div
              class="c14"
            >
              <span
                class="c15"
              >
                Option F
              </span>
            </div>
          </div>
          <span
            class="c16"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
    </ul>
    <h3
      class="c7 c8 c9"
      id="external-links"
    >
      Resources
    </h3>
    <ul
      aria-labelledby="external-links"
      class="c10"
      data-testid="resources-group"
    >
      <li>
        <a
          aria-disabled="false"
          class="c18 c19 c20 c21"
          href="/testa"
          target="_blank"
        >
          <span
            class="c22"
          >
            Option A
          </span>
          <svg
            aria-label="opens in a new tab"
            class="lucide lucide-external-link c23"
            fill="none"
            focusable="false"
            height="16"
            role="img"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 3h6v6"
            />
            <path
              d="M10 14 21 3"
            />
            <path
              d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
            />
          </svg>
          <span
            class="c16"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="true"
          class="c24 c19 c20 c21"
          disabled=""
          target="_blank"
        >
          <span
            class="c22"
          >
            Option B
          </span>
          <svg
            aria-label="opens in a new tab"
            class="lucide lucide-external-link c23"
            fill="none"
            focusable="false"
            height="16"
            role="img"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 3h6v6"
            />
            <path
              d="M10 14 21 3"
            />
            <path
              d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
            />
          </svg>
          <span
            class="c16"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`BentoMenuButton Matches Snapshot (productLinks and externalLinks) 1`] = `
.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c2:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c2 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c3 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
  padding: 0;
  width: var(--size-2x);
}

.c3 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c3:focus-visible {
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c3:hover,
.c3[aria-expanded='true'] {
  background-color: rgb(0 0 0 / 0.5);
  border-color: transparent;
  color: #FFFFFF;
}

.c3[aria-disabled='true'] {
  background-color: transparent;
  border-color: transparent;
  color: #006296;
  cursor: not-allowed;
  pointer-events: none;
}

.c4 {
  background-color: #FFFFFF;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgb(0 0 0 / 0.2);
  color: #1B1C1E;
  list-style-type: none;
  position: absolute;
  width: 100%;
  z-index: 700;
}

.c0 {
  position: relative;
}

.c6 {
  max-width: 350px;
  min-width: 200px;
  right: 0;
  width: initial;
}

.c18 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: var(--border-radius);
  color: #006296;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.875rem;
  line-height: 1.5rem;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c18:hover {
  color: #003A5A;
}

.c18:visited {
  color: #006296;
}

.c18 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c18:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c24 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: var(--border-radius);
  color: #8FCEF0;
  cursor: default;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.875rem;
  line-height: 1.5rem;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c24 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c24:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c16 {
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c23 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 1rem;
  margin-left: var(--spacing-half);
  margin-right: 0;
  width: 1rem;
}

.c19 {
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c19:visited svg {
  color: #006296;
}

.c22 {
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c21 {
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: 2rem;
  overflow: hidden;
  padding: 0 var(--spacing-2x) 0 var(--spacing-3x);
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c21 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c21:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c21:hover {
  background-color: #DBDEE1;
}

.c21:visited {
  color: #006296;
  fill: #006296;
}

.c21:visited svg {
  color: #006296;
  fill: #006296;
}

.c21[disabled] {
  color: #B7BBC2;
  fill: #B7BBC2;
  pointer-events: none;
}

.c7 {
  color: #1B1C1E;
  font-size: 1rem;
  font-weight: var(--font-semi-bold);
  line-height: 1.5rem;
  margin: var(--spacing-3x) 0;
}

.c9 {
  font-size: 0.875rem;
  margin: 0;
  padding: 0 var(--spacing-2x);
  padding-bottom: var(--spacing-1x);
}

.c10 {
  margin: 0;
  overflow-y: auto;
  padding: 0;
}

.c10:not(:last-child)::after {
  border-bottom: 1px solid #DBDEE1;
  content: '';
  display: block;
  margin: 0 var(--spacing-2x);
}

.c12 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  background-color: #F1F2F2;
  border: 1px solid #DBDEE1;
  border-radius: var(--border-radius);
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin: 0 var(--spacing-half) 2px 0;
  padding: var(--spacing-half);
}

.c14 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
}

.c15 {
  line-height: 1.25rem;
  margin: auto var(--spacing-1x) auto 0;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c13 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  font-size: 0.875rem;
  margin: 0;
  overflow: hidden;
  padding: 0 0 0 var(--spacing-half);
}

.c11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2.5rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c11 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c11:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c11:hover {
  background-color: #DBDEE1;
}

.c11[disabled],
.c11[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c17 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2.5rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c17 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c17:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c17:hover {
  background-color: transparent;
}

.c17[disabled],
.c17[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c1 .c5 {
  border-radius: var(--border-radius-2x);
  box-sizing: border-box;
  max-width: 350px;
  min-width: 200px;
  padding: var(--spacing-1halfx) 0;
  right: 0;
  width: initial;
}

.c1 .c5 .c20 {
  line-height: 1.5rem;
  padding: var(--spacing-half) var(--spacing-2x);
}

.c1 .c5 .c8 {
  margin: 0 0 var(--spacing-1x);
  padding: 0 var(--spacing-2x);
}

.c1 .c5 ul:not(:last-child)::after,
.c1 .c5 ol:not(:last-child)::after {
  border-bottom: 1px solid #DBDEE1;
  content: '';
  display: block;
  margin: var(--spacing-1x) var(--spacing-2x);
}

<div
  aria-label=""
  class="c0 c1"
  data-testid="dropdown-container"
  id="uuid1"
>
  <button
    aria-expanded="false"
    class="c2 c3"
    data-testid="menu-button"
    type="button"
  >
    <svg
      class="lucide lucide-grip"
      fill="none"
      focusable="false"
      height="16"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="5"
        r="1"
      />
      <circle
        cx="19"
        cy="5"
        r="1"
      />
      <circle
        cx="5"
        cy="5"
        r="1"
      />
      <circle
        cx="12"
        cy="12"
        r="1"
      />
      <circle
        cx="19"
        cy="12"
        r="1"
      />
      <circle
        cx="5"
        cy="12"
        r="1"
      />
      <circle
        cx="12"
        cy="19"
        r="1"
      />
      <circle
        cx="19"
        cy="19"
        r="1"
      />
      <circle
        cx="5"
        cy="19"
        r="1"
      />
    </svg>
  </button>
  <div
    class="c4 c5 c6"
    data-testid="menu-dropdownMenu"
    hidden=""
    id="uuid2"
  >
    <h3
      class="c7 c8 c9"
      id="product-links"
    >
      Products
    </h3>
    <ul
      aria-labelledby="product-links"
      class="c10"
      data-testid="products-group"
    >
      <li>
        <a
          aria-disabled="false"
          class="c11"
          data-testid="listitem-optionA"
          href="/testa"
          tabindex="0"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            class="c12"
            color="currentColor"
            focusable="false"
            height="22"
            width="22"
          />
          <div
            class="c13"
          >
            <div
              class="c14"
            >
              <span
                class="c15"
              >
                Option A
              </span>
            </div>
          </div>
          <span
            class="c16"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="true"
          class="c17"
          data-testid="listitem-optionB"
          disabled=""
          href="/testb"
          tabindex="-1"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            class="c12"
            color="currentColor"
            focusable="false"
            height="22"
            width="22"
          />
          <div
            class="c13"
          >
            <div
              class="c14"
            >
              <span
                class="c15"
              >
                Option B
              </span>
            </div>
          </div>
          <span
            class="c16"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c11"
          data-testid="listitem-optionC"
          href="/testc"
          tabindex="0"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            class="c12"
            color="currentColor"
            focusable="false"
            height="22"
            width="22"
          />
          <div
            class="c13"
          >
            <div
              class="c14"
            >
              <span
                class="c15"
              >
                Option C
              </span>
            </div>
          </div>
          <span
            class="c16"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c11"
          data-testid="listitem-optionD"
          href="/testd"
          tabindex="0"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            class="c12"
            color="currentColor"
            focusable="false"
            height="22"
            width="22"
          />
          <div
            class="c13"
          >
            <div
              class="c14"
            >
              <span
                class="c15"
              >
                Option D
              </span>
            </div>
          </div>
          <span
            class="c16"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
    </ul>
    <h3
      class="c7 c8 c9"
      id="external-links"
    >
      Resources
    </h3>
    <ul
      aria-labelledby="external-links"
      class="c10"
      data-testid="resources-group"
    >
      <li>
        <a
          aria-disabled="false"
          class="c18 c19 c20 c21"
          href="/testa"
          target="_blank"
        >
          <span
            class="c22"
          >
            Option A
          </span>
          <svg
            aria-label="opens in a new tab"
            class="lucide lucide-external-link c23"
            fill="none"
            focusable="false"
            height="16"
            role="img"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 3h6v6"
            />
            <path
              d="M10 14 21 3"
            />
            <path
              d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
            />
          </svg>
          <span
            class="c16"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="true"
          class="c24 c19 c20 c21"
          disabled=""
          target="_blank"
        >
          <span
            class="c22"
          >
            Option B
          </span>
          <svg
            aria-label="opens in a new tab"
            class="lucide lucide-external-link c23"
            fill="none"
            focusable="false"
            height="16"
            role="img"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 3h6v6"
            />
            <path
              d="M10 14 21 3"
            />
            <path
              d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
            />
          </svg>
          <span
            class="c16"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`BentoMenuButton Matches Snapshot (tag="nav") 1`] = `
.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c2:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c2 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c3 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
  padding: 0;
  width: var(--size-2x);
}

.c3 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c3:focus-visible {
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c3:hover,
.c3[aria-expanded='true'] {
  background-color: rgb(0 0 0 / 0.5);
  border-color: transparent;
  color: #FFFFFF;
}

.c3[aria-disabled='true'] {
  background-color: transparent;
  border-color: transparent;
  color: #006296;
  cursor: not-allowed;
  pointer-events: none;
}

.c4 {
  background-color: #FFFFFF;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgb(0 0 0 / 0.2);
  color: #1B1C1E;
  list-style-type: none;
  position: absolute;
  width: 100%;
  z-index: 700;
}

.c0 {
  position: relative;
}

.c6 {
  max-width: 350px;
  min-width: 200px;
  right: 0;
  width: initial;
}

.c18 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: var(--border-radius);
  color: #006296;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.875rem;
  line-height: 1.5rem;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c18:hover {
  color: #003A5A;
}

.c18:visited {
  color: #006296;
}

.c18 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c18:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c24 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: var(--border-radius);
  color: #8FCEF0;
  cursor: default;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.875rem;
  line-height: 1.5rem;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c24 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c24:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c16 {
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c23 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 1rem;
  margin-left: var(--spacing-half);
  margin-right: 0;
  width: 1rem;
}

.c19 {
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c19:visited svg {
  color: #006296;
}

.c22 {
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c21 {
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: 2rem;
  overflow: hidden;
  padding: 0 var(--spacing-2x) 0 var(--spacing-3x);
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c21 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c21:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c21:hover {
  background-color: #DBDEE1;
}

.c21:visited {
  color: #006296;
  fill: #006296;
}

.c21:visited svg {
  color: #006296;
  fill: #006296;
}

.c21[disabled] {
  color: #B7BBC2;
  fill: #B7BBC2;
  pointer-events: none;
}

.c7 {
  color: #1B1C1E;
  font-size: 1rem;
  font-weight: var(--font-semi-bold);
  line-height: 1.5rem;
  margin: var(--spacing-3x) 0;
}

.c9 {
  font-size: 0.875rem;
  margin: 0;
  padding: 0 var(--spacing-2x);
  padding-bottom: var(--spacing-1x);
}

.c10 {
  margin: 0;
  overflow-y: auto;
  padding: 0;
}

.c10:not(:last-child)::after {
  border-bottom: 1px solid #DBDEE1;
  content: '';
  display: block;
  margin: 0 var(--spacing-2x);
}

.c12 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  background-color: #F1F2F2;
  border: 1px solid #DBDEE1;
  border-radius: var(--border-radius);
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin: 0 var(--spacing-half) 2px 0;
  padding: var(--spacing-half);
}

.c14 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
}

.c15 {
  line-height: 1.25rem;
  margin: auto var(--spacing-1x) auto 0;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c13 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  font-size: 0.875rem;
  margin: 0;
  overflow: hidden;
  padding: 0 0 0 var(--spacing-half);
}

.c11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2.5rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c11 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c11:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c11:hover {
  background-color: #DBDEE1;
}

.c11[disabled],
.c11[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c17 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2.5rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c17 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c17:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c17:hover {
  background-color: transparent;
}

.c17[disabled],
.c17[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c1 .c5 {
  border-radius: var(--border-radius-2x);
  box-sizing: border-box;
  max-width: 350px;
  min-width: 200px;
  padding: var(--spacing-1halfx) 0;
  right: 0;
  width: initial;
}

.c1 .c5 .c20 {
  line-height: 1.5rem;
  padding: var(--spacing-half) var(--spacing-2x);
}

.c1 .c5 .c8 {
  margin: 0 0 var(--spacing-1x);
  padding: 0 var(--spacing-2x);
}

.c1 .c5 ul:not(:last-child)::after,
.c1 .c5 ol:not(:last-child)::after {
  border-bottom: 1px solid #DBDEE1;
  content: '';
  display: block;
  margin: var(--spacing-1x) var(--spacing-2x);
}

<nav
  aria-label="Menu"
  class="c0 c1"
  data-testid="dropdown-container"
  id="uuid1"
>
  <button
    aria-expanded="false"
    class="c2 c3"
    data-testid="menu-button"
    type="button"
  >
    <svg
      class="lucide lucide-grip"
      fill="none"
      focusable="false"
      height="16"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="5"
        r="1"
      />
      <circle
        cx="19"
        cy="5"
        r="1"
      />
      <circle
        cx="5"
        cy="5"
        r="1"
      />
      <circle
        cx="12"
        cy="12"
        r="1"
      />
      <circle
        cx="19"
        cy="12"
        r="1"
      />
      <circle
        cx="5"
        cy="12"
        r="1"
      />
      <circle
        cx="12"
        cy="19"
        r="1"
      />
      <circle
        cx="19"
        cy="19"
        r="1"
      />
      <circle
        cx="5"
        cy="19"
        r="1"
      />
    </svg>
  </button>
  <div
    class="c4 c5 c6"
    data-testid="menu-dropdownMenu"
    hidden=""
    id="uuid2"
  >
    <h3
      class="c7 c8 c9"
      id="product-links"
    >
      Products
    </h3>
    <ul
      aria-labelledby="product-links"
      class="c10"
      data-testid="products-group"
    >
      <li>
        <a
          aria-disabled="false"
          class="c11"
          data-testid="listitem-optionA"
          href="/testa"
          tabindex="0"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            class="c12"
            color="currentColor"
            focusable="false"
            height="22"
            width="22"
          />
          <div
            class="c13"
          >
            <div
              class="c14"
            >
              <span
                class="c15"
              >
                Option A
              </span>
            </div>
          </div>
          <span
            class="c16"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="true"
          class="c17"
          data-testid="listitem-optionB"
          disabled=""
          href="/testb"
          tabindex="-1"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            class="c12"
            color="currentColor"
            focusable="false"
            height="22"
            width="22"
          />
          <div
            class="c13"
          >
            <div
              class="c14"
            >
              <span
                class="c15"
              >
                Option B
              </span>
            </div>
          </div>
          <span
            class="c16"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c11"
          data-testid="listitem-optionC"
          href="/testc"
          tabindex="0"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            class="c12"
            color="currentColor"
            focusable="false"
            height="22"
            width="22"
          />
          <div
            class="c13"
          >
            <div
              class="c14"
            >
              <span
                class="c15"
              >
                Option C
              </span>
            </div>
          </div>
          <span
            class="c16"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c11"
          data-testid="listitem-optionD"
          href="/testd"
          tabindex="0"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            class="c12"
            color="currentColor"
            focusable="false"
            height="22"
            width="22"
          />
          <div
            class="c13"
          >
            <div
              class="c14"
            >
              <span
                class="c15"
              >
                Option D
              </span>
            </div>
          </div>
          <span
            class="c16"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
    </ul>
    <h3
      class="c7 c8 c9"
      id="external-links"
    >
      Resources
    </h3>
    <ul
      aria-labelledby="external-links"
      class="c10"
      data-testid="resources-group"
    >
      <li>
        <a
          aria-disabled="false"
          class="c18 c19 c20 c21"
          href="/testa"
          target="_blank"
        >
          <span
            class="c22"
          >
            Option A
          </span>
          <svg
            aria-label="opens in a new tab"
            class="lucide lucide-external-link c23"
            fill="none"
            focusable="false"
            height="16"
            role="img"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 3h6v6"
            />
            <path
              d="M10 14 21 3"
            />
            <path
              d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
            />
          </svg>
          <span
            class="c16"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="true"
          class="c24 c19 c20 c21"
          disabled=""
          target="_blank"
        >
          <span
            class="c22"
          >
            Option B
          </span>
          <svg
            aria-label="opens in a new tab"
            class="lucide lucide-external-link c23"
            fill="none"
            focusable="false"
            height="16"
            role="img"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 3h6v6"
            />
            <path
              d="M10 14 21 3"
            />
            <path
              d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
            />
          </svg>
          <span
            class="c16"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
    </ul>
  </div>
</nav>
`;
